fix mobile nav spacing

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -70,3 +70,17 @@
 
     
 }
+
+
+@media screen and (max-width: 800px){
+
+#about{
+    margin-left: 40%;
+}
+
+.nav-text{
+    margin-top: 0.2em;
+}
+
+    
+}
